# DnD_Battle_v2

./: .gitignore  CMakeLists.txt  README.md
src/: .gitignore  main.cpp
src/character/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/gui/: Button.cpp  Button.h  GameWindow.cpp  GameWindow.h  HealthBar.cpp  HealthBar.h
src/logic/: BattleManager.cpp  BattleManager.h  Dice.cpp  Dice.h
src/screens/: ClassSelectionScreen.cpp  ClassSelectionScreen.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  Screen.h
